kubernetes/apps/base/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - jellyfin-kube.home.parents-basement.win
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
